// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithTranslationContextComponent
  translations={null}
>
  <Alert
    closeHandler={null}
    icon={null}
    translations={
      Object {
        "close": "Close",
      }
    }
    type="note"
  >
    <div
      className="root isRootNote"
      role="alert"
    >
      <div
        className="message"
      >
        <div>
          Children
        </div>
      </div>
    </div>
  </Alert>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with all props 1`] = `
<WithTranslationContextComponent
  closeHandler={[Function]}
  icon={
    <span
      className="icon"
    />
  }
  id="custom-id"
  translations={null}
  type="success"
>
  <Alert
    closeHandler={[Function]}
    icon={
      <span
        className="icon"
      />
    }
    id="custom-id"
    translations={
      Object {
        "close": "Close",
      }
    }
    type="success"
  >
    <div
      className="root isRootSuccess"
      id="custom-id"
      role="alert"
    >
      <div
        className="icon"
      >
        <span
          className="icon"
        />
      </div>
      <div
        className="message"
        id="custom-id__content"
      >
        <div>
          Children
        </div>
      </div>
      <button
        className="close"
        id="custom-id__close"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
        title="Close"
        type="button"
      >
        <span
          className="closeSign"
        >
          ×
        </span>
      </button>
    </div>
  </Alert>
</WithTranslationContextComponent>
`;
